--- a/video-end-api/src/main/resources/application.properties
+++ b/video-end-api/src/main/resources/application.properties
@@ -2,8 +2,12 @@
 spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306/imooc-video-dev
 #home-mysql
+#spring.datasource.username=root
+#spring.datasource.password=Wzy1gqqbuu-
+#company-mysql
 spring.datasource.username=root
-spring.datasource.password=Wzy1gqqbuu-
+spring.datasource.password=wzy1gqqbuu
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
